--- a/Ejeercicio3/Ejercicio3.html
+++ b/Ejeercicio3/Ejercicio3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="../Ejercicio1.html">Ejercicio1</a>
+        <a href="../index.html">Ejercicio1</a>
         <a href="../Ejercicio2/Ejercicio2.html">Ejercicio2</a>
         <a href="#">Ejercicio3</a>
     </nav>
