--- a/Ejercicio2/Ejercicio2.html
+++ b/Ejercicio2/Ejercicio2.html
@@ -7,14 +7,13 @@
 </head>
 <body>
     <nav>
-        <a href="../Ejercicio1.html">Ejercicio1</a>
+        <a href="../index.html">Ejercicio1</a>
         <a href="#">Ejercicio2</a>
         <a href="../Ejeercicio3/Ejercicio3.html">Ejercicio3</a>
     </nav>
        
       <h1>Programación Web Full Stack</h1>
       <h2>Módulos de la cursada</h2>
-
       <ol>
         <li>
            Diseño Web: 
