--- a/Ejercicio2/Ejercicio2.html
+++ b/Ejercicio2/Ejercicio2.html
@@ -35,7 +35,7 @@
             Programación Web Avanzada:
             <ul>
                 <li>
-                    REactJs
+                    ReactJs
                 </li>
             </ul>
         </li>
